<resources>
    <string name="app_name">WalletKeeper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_btn">Agregar</string>
    <string name="desc_hint">Descripcion</string>
    <string name="price_hint">Precio</string>
    <string name="budget_hint">Presupuesto</string>
    <string name="cancel_btn">cancelar</string>
    <string name="settings">Configuraciones</string>
    <string name="no_empty_form_please">ingrese un valor</string>
    <string name="define_btn">Definir</string>
    <string name="add_entry_title">Añadir Gasto</string>
    <string name="isIncome">Ingreso</string>
    <string name="title_activity_categories_listing">Categorias</string>
    <string name="SettingsTittle">Configuración de Ahorro</string>
    <string name="add_category_title">Añadir Categoria</string>
    <string name="no_empty_title_please">Ingrese un Nombre</string>
    <string name="category_hint">Categoria</string>
</resources>
