<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <EditText
            android:id="@+id/entryBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="false"
            android:hint="@string/budget_hint"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/defineBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/define_btn"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_toEndOf="@id/entryBudget"/>

        <TextView
            android:id="@+id/Titulo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/SettingsTittle"
            android:gravity="center"
            android:layout_below="@id/entryBudget"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerSaving"
                android:layout_below="@+id/Titulo"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="cl.usm.inf.walletkeeper.DefineBudgetActivity"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

</RelativeLayout>